try2 fix instant padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ html {
 
 body {
   overflow-x: hidden;
+  display: block;
+  width: 100%;
 }
 
 :root {
